// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpressionRouterForm initializes 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="split_by_expression"
  title="Split by Expression"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "description": "Split by a custom expression",
        "form": [Function],
        "localization": [Function],
        "name": "Split by Expression",
        "type": "split_by_expression",
      }
    }
    onChange={[MockFunction]}
  />
  <p>
    If the expression...
  </p>
  <Connect(TextInputElement)
    entry={
      Object {
        "value": "@run.input",
      }
    }
    name="Operand"
    onChange={[Function]}
    showLabel={false}
  />
  <CaseList
    cases={
      Array [
        Object {
          "exitName": null,
          "kase": Object {
            "arguments": Array [
              "red",
            ],
            "exit_uuid": null,
            "type": "has_any_word",
            "uuid": "generated_uuid_2",
          },
          "uuid": "generated_uuid_2",
        },
      ]
    }
    data-spec="cases"
    onCasesUpdated={[Function]}
  />
  <OptionalTextInput
    helpText="By naming the result, you can reference it later using @run.results.whatever_the_name_is"
    name="Result Name"
    onChange={[Function]}
    toggleText="Save as.."
    value={
      Object {
        "value": "Color",
      }
    }
  />
</Dialog>
`;

exports[`ExpressionRouterForm should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="split_by_expression"
  title="Split by Expression"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "description": "Split by a custom expression",
        "form": [Function],
        "localization": [Function],
        "name": "Split by Expression",
        "type": "split_by_expression",
      }
    }
    onChange={[MockFunction]}
  />
  <p>
    If the expression...
  </p>
  <Connect(TextInputElement)
    entry={
      Object {
        "value": "@run.input",
      }
    }
    name="Operand"
    onChange={[Function]}
    showLabel={false}
  />
  <CaseList
    cases={Array []}
    data-spec="cases"
    onCasesUpdated={[Function]}
  />
  <OptionalTextInput
    helpText="By naming the result, you can reference it later using @run.results.whatever_the_name_is"
    name="Result Name"
    onChange={[Function]}
    toggleText="Save as.."
    value={
      Object {
        "value": "",
      }
    }
  />
</Dialog>
`;

exports[`ExpressionRouterForm updates should save changes 1`] = `
Object {
  "cases": Array [
    Object {
      "exitName": "Red",
      "kase": Object {
        "arguments": Array [
          "red",
        ],
        "type": "has_any_word",
      },
    },
    Object {
      "exitName": "Red",
      "kase": Object {
        "arguments": Array [
          "maroon",
        ],
        "type": "has_any_word",
      },
    },
    Object {
      "exitName": "Green",
      "kase": Object {
        "arguments": Array [
          "green",
        ],
        "type": "has_any_word",
      },
    },
  ],
  "operand": Object {
    "value": "@run.input",
  },
  "resultName": Object {
    "value": "Favorite Color",
  },
  "valid": true,
}
`;

exports[`ExpressionRouterForm updates should save changes 2`] = `
Object {
  "inboundConnections": Object {},
  "node": Object {
    "actions": Array [],
    "exits": Array [
      Object {
        "destination_node_uuid": null,
        "name": "Red",
        "uuid": "generated_uuid_1",
      },
      Object {
        "destination_node_uuid": null,
        "name": "Green",
        "uuid": "generated_uuid_2",
      },
      Object {
        "destination_node_uuid": null,
        "name": "Other",
        "uuid": "generated_uuid_3",
      },
    ],
    "router": Object {
      "cases": Array [
        Object {
          "arguments": Array [
            "red",
          ],
          "exit_uuid": "generated_uuid_1",
          "type": "has_any_word",
        },
        Object {
          "arguments": Array [
            "maroon",
          ],
          "exit_uuid": "generated_uuid_1",
          "type": "has_any_word",
        },
        Object {
          "arguments": Array [
            "green",
          ],
          "exit_uuid": "generated_uuid_2",
          "type": "has_any_word",
        },
      ],
      "default_exit_uuid": "generated_uuid_3",
      "operand": "@run.input",
      "result_name": "Favorite Color",
      "type": "switch",
    },
    "uuid": "node-0",
    "wait": null,
  },
  "ui": Object {
    "position": null,
    "type": "split_by_expression",
  },
}
`;
